--- a/Contacts/Contacts.csproj
+++ b/Contacts/Contacts.csproj
@@ -167,7 +167,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Contact.cs" />
-    <Compile Include="Models\ContactsController.cs" />
+    <Compile Include="Controllers\ContactsController.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
