--- a/Contacts/Web.config
+++ b/Contacts/Web.config
@@ -22,6 +22,9 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <customErrors mode="On">
+      <error redirect="~/error.cshtml"/>
+    </customErrors>
   </system.web>
   <system.webServer>
     <modules>
